--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -42,7 +42,7 @@
             </div>
 
             <div class="d-flex justify-content-between">
-              <button type="submit" value="addExpense"  class="btn btn-info text-white fw-bold shadow-sm">
+              <button type="submit" class="btn btn-info text-white fw-bold shadow-sm">
                 ➕ Add Expense
               </button>
               <button type="reset" class="btn btn-outline-danger fw-bold">
